<?xml version="1.0"?>
<package>
  <name>drv_motor</name>
  <version>0.0.0</version>
  <description>The drv_motor package</description>

  <maintainer email="zhipengdongneu@gmail.com">Zhipeng Dong</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>drv_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depen